samples/_failures_safe/1761214489_14f096_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7dfd2b65.c: In function ‘main’:
./samples/SAFE/__tmp_7dfd2b65.c:187:9: error: expected expression at end of input
  187 |         if (!process_input(&machine, input))
      |         ^~
./samples/SAFE/__tmp_7dfd2b65.c:187:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7dfd2b65.c:187:9: error: expected declaration or statement at end of input
